refinement of UI styling and a mockup of the jukebox ui

--- a/static/index.html
+++ b/static/index.html
@@ -5,15 +5,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>JukeBox</title>
 
-		<!-- 3RD PARTY SCRIPTS -->
-		<script src="js/jquery/jquery-2.0.3.min.js"></script>
-
-	  
-		<!-- MY SCRIPTS -->
-
-
 		<!-- STYLING -->
 		<link href="css/juke-style.css" rel="stylesheet">
+		<link href="flat-ui/flat-ui.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -37,6 +31,11 @@
 				</div>
 			</div>
 		</div>
+
+		
+		<!-- LOAD JS SCRIPTS -->
+		<script src="js/jquery/jquery-2.0.3.min.js"></script>
+
 	</body>
 
 </html>
