--- a/static/index2.html
+++ b/static/index2.html
@@ -16,8 +16,7 @@
 			<div class="row">
 				<div class="col-md-3 col-md-offset-1">
 					<div class="userlist">
-						<div class="userlist-search">
-							<input class="userlist-search-field" type="search" value="" placeholder="Search" />
+						<div class="userlist-control-btn">
 						</div>
 						<ul>
 							<li class="userlist-done">
