--- a/static/index2.html
+++ b/static/index2.html
@@ -60,7 +60,9 @@
 					</div>
 				</div>
 				<div class="col-md-7">
-					<a href="#fakelink" class="btn btn-block btn-lg btn-warning">Warning Button</a>
+					<div class="juke-upload-panel">
+							Drop mp3 files here
+					</div>
 				</div>
 			</div>
 		</div>
