--- a/static/index2.html
+++ b/static/index2.html
@@ -63,6 +63,21 @@
 					<div class="juke-upload-panel">
 							Drop mp3 files here
 					</div>
+					<div class="juke-song-block">
+							Song 1
+					</div>
+					<div class="juke-song-block">
+							Song 2
+					</div>
+					<div class="juke-song-block">
+							Song 3
+					</div>
+					<div class="juke-song-block">
+							Song 4
+					</div>
+					<div class="juke-song-block">
+							Song 5
+					</div>
 				</div>
 			</div>
 		</div>
