--- a/static/index2.html
+++ b/static/index2.html
@@ -12,6 +12,7 @@
 	</head>
 
 	<body>
+		<div class="juke-background">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-md-offset-1">
@@ -39,7 +40,6 @@
 									<h4 class="userlist-name">
 										McLovin
 									</h4>
-									<p><span class="userlist-control-label">controlling</span></p>
 								</div>
 							</li>
 							<li>
@@ -61,27 +61,28 @@
 				</div>
 				<div class="col-md-7">
 					<div class="juke-upload-panel">
-							Drop mp3 files here
+						Drop mp3 files here
 					</div>
-					<div class="juke-song-block">
-							Song 1
+					<div class="card">
+						Song 1
 					</div>
-					<div class="juke-song-block">
-							Song 2
+					<div class="card">
+						Song 2
 					</div>
-					<div class="juke-song-block">
-							Song 3
+					<div class="card juke-song-block">
+						Song 3
 					</div>
-					<div class="juke-song-block">
-							Song 4
+					<div class="card">
+						Song 4
+						<div class="card juke-song-remove-btn">X</div>
 					</div>
-					<div class="juke-song-block">
-							Song 5
+					<div class="card">
+						Song 5
 					</div>
 				</div>
 			</div>
 		</div>
-
+		</div>
 		
 		<!-- LOAD JS SCRIPTS -->
 		<script src="js/jquery/jquery-2.0.3.min.js"></script>
