Use more card styles for UI

--- a/static/index2.html
+++ b/static/index2.html
@@ -16,47 +16,24 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-md-offset-1">
-					<div class="userlist">
-						<div class="userlist-control-btn">
+					<div class="card userlist">
+						<div class="card userlist-control-btn">
 						</div>
-						<ul>
-							<li class="userlist-done">
-								<!--<div class="userlist-icon fui-user"></div>-->
-								<div class="userlist-content">
-									<h4 class="userlist-name">
-										Bob
-									</h4>
-								</div>
-							</li>
-							<li>
-								<div class="userlist-content">
-									<h4 class="userlist-name">
-										Rutherford
-									</h4>
-								</div>
-							</li>
-							<li>
-								<div class="userlist-content">
-									<h4 class="userlist-name">
-										McLovin
-									</h4>
-								</div>
-							</li>
-							<li>
-								<div class="userlist-content">
-									<h4 class="userlist-name">
-										Scott
-									</h4>
-								</div>
-							</li>
-							<li>
-								<div class="userlist-content">
-									<h4 class="userlist-name">
-										Antoinette
-									</h4>
-								</div>
-							</li>
-						</ul>
+						<div class="card userlist-user">
+							Bob
+						</div>
+						<div class="card userlist-user">
+							Rutherford
+						</div>
+						<div class="card userlist-user">
+							McLovin
+						</div>
+						<div class="card userlist-user">
+							Scott
+						</div>
+						<div class="card userlist-user">
+							Antoinette
+						</div>
 					</div>
 				</div>
 				<div class="col-md-7">
