add initial "remove" buttons to song blocks

--- a/static/index2.html
+++ b/static/index2.html
@@ -40,21 +40,25 @@
 					<div class="juke-upload-panel">
 						Drop mp3 files here
 					</div>
-					<div class="card">
+					<div class="card song-block">
 						Song 1
+						<div class="card song-remove-btn">X</div>
 					</div>
-					<div class="card">
+					<div class="card song-block">
 						Song 2
+						<div class="card song-remove-btn">X</div>
 					</div>
-					<div class="card juke-song-block">
+					<div class="card song-block">
 						Song 3
+						<div class="card song-remove-btn">X</div>
 					</div>
-					<div class="card">
+					<div class="card song-block">
 						Song 4
-						<div class="card juke-song-remove-btn">X</div>
+						<div class="card song-remove-btn">X</div>
 					</div>
-					<div class="card">
+					<div class="card song-block">
 						Song 5
+						<div class="card song-remove-btn">X</div>
 					</div>
 				</div>
 			</div>
