--- a/static/index2.html
+++ b/static/index2.html
@@ -8,16 +8,15 @@
 		<!-- STYLING -->
 		<link href="css/juke-style.css" rel="stylesheet">
 		<link href="flat-ui/bootstrap/css/bootstrap.css" rel="stylesheet">
-		<link href="flat-ui/css/flat-ui.css" rel="stylesheet">
+		<!--<link href="flat-ui/css/flat-ui.css" rel="stylesheet">-->
 	</head>
 
 	<body class="juke-background">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3 col-md-offset-1">
-					<div class="card userlist-control-btn">
-						Take Control
-					</div>
+					<div class="juke-heightframe">
+					<div class="card userlist-control-btn">TAKE CONTROL</div>
 					<div class="card userlist">
 						<div class="card userlist-user">
 							Bob
@@ -36,13 +35,15 @@
 						</div>
 					</div>
 				</div>
+				</div>
 				<div class="col-md-7">
+					<div class="juke-heightframe">
 					<div class="card upload-panel">
 						<div class="card upload-text">
-							<table>
+							<table align="center">
 								<tr>
-									<td>Drop mp3 files here or</td>
-									<td><div class="card upload-btn"></div></td>
+									<td>DRAG AND DROP FILES HERE OR</td>
+									<td><div class="card upload-btn">UPLOAD</div></td>
 								</tr>
 							</table>
 						</div>
@@ -67,6 +68,13 @@
 						Song 5
 						<div class="card song-remove-btn">X</div>
 					</div>
+					<div class="card song-block">
+						Song 6
+						<div class="card song-remove-btn">X</div>
+					</div>
+					<div class="card music-controls">
+					</div>
+				</div>
 				</div>
 			</div>
 		</div>
