removed container blurring for now, because some machines can't render it fast enough.

--- a/static/index.html
+++ b/static/index.html
@@ -93,7 +93,7 @@
 			$('#participate').avgrund({
 				height: 230,
 				holderClass: 'card',
-				onBlurContainer: '.container',
+				//onBlurContainer: '.container',
 				template: '    <div class="card welcome-modal">WELCOME!</div>' +
 				          '    <div class="form-group">' +
 				          '        <input type="text" value placeholder="Nickname" class="form-control">' +
