--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
 						<div class="card upload-text">
 							<table align="center">
 								<tr>
-									<td>DRAG AND DROP FILES HERE OR</td>
+									<td>DROP FILES HERE OR</td>
 									<td><div class="card upload-btn">UPLOAD</div></td>
 								</tr>
 							</table>
