--- a/static/index.html
+++ b/static/index.html
@@ -44,9 +44,10 @@
 							<table align="center">
 								<tr>
 									<td>DROP FILES HERE OR</td>
-									<td><div class="card upload-btn">UPLOAD</div></td>
+									<td><div class="card upload-btn" id="upload">UPLOAD</div></td>
 								</tr>
 							</table>
+							<input name="file" type="file" id="chooser" style="visibility:hidden"/>
 						</div>
 					</div>
 					<ul id="sortable" class="song-list">
@@ -115,10 +116,6 @@
 		<script src="js/jquery/jquery.sortable.min.js"></script>
 		<script src="js/jquery/jquery.avgrund.min.js"></script>
 		<script src="js/jukebox.js"></script>
-
-		<!-- TODO: move this script to jukebox.js
-		<script>
-		</script> -->
 
 	</body>
 
