added dynamic syncing of songs and users with server so that all clients see the same thing. cool!

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,10 @@
 				<div class="col-md-3 col-md-offset-1">
 					<div class="juke-heightframe">
 					<div href="#" class="card userlist-control-btn" id="participate">TAKE CONTROL</div>
-					<div class="card userlist">
+					<ul id="userlist" class="card userlist">
+						<!--<li class="card userlist-user">Bob</li>-->
+					</ul>
+					<!--<div class="card userlist">
 						<div class="card userlist-user">
 							Bob
 						</div>
@@ -34,7 +37,7 @@
 						<div class="card userlist-user">
 							Antoinette
 						</div>
-					</div>
+					</div>-->
 				</div>
 				</div>
 				<div class="col-md-7">
@@ -60,12 +63,6 @@
 						<li class="card song-block" style="visibility:hidden"></li>
 						<li class="card song-block" style="visibility:hidden"></li>
 						<li class="card song-block" style="visibility:hidden"></li>
-						<!--<li class="card song-block">1</li>
-						<li class="card song-block">2</li>
-						<li class="card song-block">3</li>
-						<li class="card song-block">4</li>
-						<li class="card song-block">5</li>
-						<li class="card song-block">6</li>-->
 					</ul>
 					<ul id="sortable" class="song-list"></ul>
 
