finished implementing control grabbing and syncing controller data to clients. added endSong() interface function to the server for Jason.

--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
 			<div class="row">
 				<div class="col-md-3 col-md-offset-1">
 					<div class="juke-heightframe">
-					<div href="#" class="card userlist-control-btn" id="participate">TAKE CONTROL</div>
+					<div id="participate" class="card userlist-btn participate">JOIN</div>
 					<ul id="userlist" class="card userlist">
 					</ul>
 				</div>
