--- a/static/index.html
+++ b/static/index.html
@@ -32,9 +32,9 @@
 									<td><div class="card upload-btn" id="upload">UPLOAD</div></td>
 								</tr>
 							</table>
-							<form method="POST" enctype="multipart/form-data" id=fileform" action="upload">
+							<form id="upload-form" method="post" action="upload" enctype="multipart/form-data">
 								<input name="mp3file" type="file" id="chooser" style="visibility:hidden"/>
-								<input type="submit" id="chooser-submit" style="visibility:hidden"/>
+								<!--<input type="submit" id="chooser-submit" style="visibility:hidden"/>-->
 							</form>
 						</div>
 					</div>
@@ -61,6 +61,9 @@
 		<script src="js/jquery/jquery-2.0.3.min.js"></script>
 		<script src="js/jquery/jquery.sortable.min.js"></script>
 		<script src="js/jquery/jquery.avgrund.min.js"></script>
+		<script src="js/jquery/jquery.ui.widget.js"></script>
+		<script src="js/jquery/jquery.iframe-transport.js"></script>
+		<script src="js/jquery/jquery.fileupload.js"></script>
 		<script src="js/jukebox.js"></script>
 
 	</body>
