lots of polish and bug fixes. uploading and syncing works almost exactly correctly now.

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
 							<table align="center">
 								<tr>
 									<td>DROP FILES HERE OR</td>
-									<td><div class="card upload-btn" id="upload">UPLOAD</div></td>
+									<td><div class="card upload-btn upload-btn-disabled" id="upload">UPLOAD</div></td>
 								</tr>
 							</table>
 							<form id="upload-form" method="post" action="upload" enctype="multipart/form-data">
