added first progress bar attempt

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,8 @@
 				</div>
 				<div class="col-md-7">
 					<div class="juke-heightframe-right">
-					<div class="card upload-panel" id="drop">
+					<div class="card upload-panel-outer">
+					<div class="card upload-panel-inner" id="drop">
 						<div class="card upload-text">
 							<table align="center">
 								<tr>
@@ -36,6 +37,7 @@
 								<input name="mp3file" type="file" id="chooser" style="visibility:hidden"/>
 							</form>
 						</div>
+					</div>
 					</div>
 					<ul id="placeholders" class="song-list">
 						<li class="card song-block" style="visibility:hidden"></li>
